# zipax

./: .gitignore  LICENSE  PRD-animation-iteration.md  PRD-unified-optimization.md  PRD-website-polish.md  Package.resolved  Package.swift  README.md  RELEASE_NOTES.md  SUPPORT.md  appcast.xml  index.html
.codex/environments/: environment.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
Resources/Tools/lib/: libb2.1.dylib  (+20 more)
assets/: icons-vendor-DZMj3AqO.js  index-C7W796dl.css  index-PY9EbzV8.js  react-vendor-Ce7YadKZ.js  ui-vendor-CCMsgXoD.js
docs/: design-notes.md  particle-logo-performance-guide.md  prd-auto-update-download-flow.md  prd-global-code-simplification.md  prd-release-push-workflow.md  prd-rust-core-structure-size-performance.md  prd-v0.22-github-release.md  prd-v0.23-auto-update-release.md  prd-website-app-linked-motion-v4.md  website-iteration-plan-v3.md  website-motion-visual-guidelines.md
script/: build_and_run.sh  package_release.sh
scripts/: generate_app_icon.py  vendor_tools.sh
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  main.tsx  types.d.ts
zipax-cross/: .env.example  .gitignore  Cargo.toml  RELEASE_NOTES_0.2.1.md  RELEASE_NOTES_0.2.md  RELEASE_NOTES_0.22.md  build-install.sh  index.html  package-lock.json  package.json  vite.config.ts
zipax-cross/.github/workflows/: release.yml
zipax-cross/crates/zipax-cli/: Cargo.toml
zipax-cross/crates/zipax-cli/src/: main.rs
zipax-cross/crates/zipax-core/: Cargo.toml
zipax-cross/crates/zipax-core/src/: config.rs  error.rs  format.rs  image_io.rs  lib.rs  plan.rs  process.rs  utils.rs
zipax-cross/crates/zipax-core/src/compress/: avif.rs  heic.rs  image_pdf.rs  jpeg.rs  mod.rs  pdf.rs  png.rs  webp.rs
zipax-cross/scripts/: generate-latest-json.sh  generate-windows-icons.sh  measure-build-size.sh
zipax-cross/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
zipax-cross/src-tauri/: Cargo.toml  tauri.conf.json
zipax-cross/src-tauri/capabilities/: default.json
zipax-cross/src-tauri/icons/: icon.icns  tray-icon-22.rgba  tray-icon-44.rgba  tray-icon.rgba
zipax-cross/src-tauri/src/: app_window.rs  autostart.rs  commands.rs  compression_options.rs  file_commands.rs  lib.rs  main.rs  state.rs  tray_commands.rs  watch_commands.rs  watcher.rs
zipax-cross/src/components/: AboutView.tsx  AutomationView.tsx  CompressionSettingsEditor.tsx  CompressionSettingsEditorParts.tsx  DependenciesView.tsx  GeneralSettings.tsx  GeneralView.tsx  ManualCompression.tsx  ManualCompressionConfig.tsx  ManualCompressionParts.tsx  UpdatePrompt.tsx  WindowControls.tsx  WindowFrame.tsx  WorkflowView.tsx  icons.tsx
zipax-cross/src/components/ui/: ConfigCard.tsx  FolderRuleRow.tsx  HeroSelect.tsx  HeroSwitch.tsx  QualitySlider.tsx  SegmentTabs.tsx  SettingsCard.tsx  index.ts
zipax-cross/src/hooks/: useAppEffects.ts  useAutoWindowSize.ts  useAutomationRules.ts  useManualCompressionActions.ts  useManualImageInput.ts  useUpdateCheck.ts
zipax-cross/src/lib/: format.ts  tauri.ts  update.ts  utils.ts
zipax-cross/src/store/: app.ts  types.ts  utils.ts
zipax-cross/src/styles/: about.css  automation.css  base.css  components.css  config.css  manual.css  motion.css  settings.css  window.css
(+68 files in other folders)
